--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -3,16 +3,16 @@
 
 :root {
   /* variables for iOS components */
-  --background-color: #0d0d0d;
-  --text-color: #fff;
-  --sub-text-color: #999;
+  --background-color: rgba(13,13,13,0.09);
+  --text-color: rgba(6,1,14,0.4);
+  --sub-text-color: rgba(149,146,146,1);
   --highlight-color: #ffa101;
   --second-highlight-color: #da5926;
   --border-color: #242424;
   --button-background-color: var(--highlight-color);
   --button-cta-background-color: var(--second-highlight-color);
   --button-light-color: white;
-  --toolbar-background-color: #181818;
+  --toolbar-background-color: rgba(24,24,24,0.62);
   --toolbar-button-color: var(--highlight-color);
   --toolbar-text-color: #fff;
   --toolbar-border-color: #242424;
@@ -22,8 +22,8 @@
   --segment-color: var(--highlight-color);
   --segment-active-text-color: #fff;
   --segment-active-background-color: color(var(--segment-color) b(80%));
-  --list-background-color: #181818;
-  --list-header-background-color: #111;
+  --list-background-color: rgba(24,24,24,0.19);
+  --list-header-background-color: rgba(17,17,17,0.44);
   --list-tap-active-background-color: #262626;
   --list-item-chevron-color: #383833;
   --progress-bar-color: var(--highlight-color);
@@ -42,15 +42,15 @@
   --range-track-background-color: #6b6f74;
   --range-track-background-color-active: #bbb;
   --range-thumb-background-color: #fff;
-  --modal-background-color: color(black a(70%));
+  --modal-background-color: rgba(0,0,0,0.44);
   --modal-text-color: #fff;
   --alert-dialog-background-color: #f4f4f4;
   --alert-dialog-text-color: #1f1f21;
   --alert-dialog-button-color: var(--highlight-color);
   --alert-dialog-separator-color: #ddd;
-  --dialog-background-color: #0d0d0d;
-  --dialog-text-color: #1f1f21;
-  --popover-background-color: #242424;
+  --dialog-background-color: rgba(13,13,13,0.11);
+  --dialog-text-color: rgba(31,31,33,0.74);
+  --popover-background-color: rgba(36,36,36,0.34);
   --popover-text-color: var(--text-color);
   --action-sheet-title-color: #8f8e94;
   --action-sheet-button-separator-color: rgba(0, 0, 0, 0.1);
@@ -61,12 +61,12 @@
   --action-sheet-cancel-button-background-color: #fff;
   --notification-background-color: #fe3824;
   --notification-color: white;
-  --search-input-background-color: color(white a(9%));
+  --search-input-background-color: rgba(94,92,92,0.16);
   --fab-text-color: #ffffff;
   --fab-background-color: var(--highlight-color);
   --fab-active-background-color: color(var(--fab-background-color) a(70%));
-  --card-background-color: var(--border-color);
-  --card-text-color: var(--text-color);
+  --card-background-color: rgba(36,36,36,0.38);
+  --card-text-color: rgba(6,1,14,0.52);
   --toast-background-color: #ccc;
   --toast-text-color: #000;
   --toast-button-text-color: #000;
@@ -74,7 +74,7 @@
   --select-input-border-color: var(--border-color);
 
   /* variables for Material Design components */
-  --material-background-color: #303030;
+  --material-background-color: rgba(48,48,48,0.16);
   --material-text-color: #ffffff;
   --material-notification-background-color: #f50057;
   --material-notification-color: white;
@@ -87,7 +87,7 @@
   --material-range-disabled-thumb-color: #4f4f4f;
   --material-range-disabled-thumb-border-color: #303030;
   --material-range-zero-thumb-color: #0d0d0d;
-  --material-toolbar-background-color: #212121;
+  --material-toolbar-background-color: rgba(33,33,33,0.67);
   --material-toolbar-text-color: #ffffff;
   --material-toolbar-button-color: var(--toolbar-button-color);
   --material-segment-background-color: #292929;
@@ -111,8 +111,8 @@
   --material-text-input-text-color: color(#fff a(75%));
   --material-text-input-active-color: color(#fff a(75%));
   --material-text-input-inactive-color: color(#fff a(30%));
-  --material-search-background-color: #424242;
-  --material-dialog-background-color: #424242;
+  --material-search-background-color: rgba(66,66,66,0.91);
+  --material-dialog-background-color: rgba(66,66,66,0.66);
   --material-dialog-text-color: var(--material-text-color);
   --material-alert-dialog-background-color: #424242;
   --material-alert-dialog-title-color: white;
@@ -131,8 +131,8 @@
   --material-fab-text-color: #31313a;
   --material-fab-background-color: #ffffff;
   --material-fab-active-background-color: color(white a(75%));
-  --material-card-background-color: #424242;
-  --material-card-text-color: color(white a(46%));
+  --material-card-background-color: rgba(66,66,66,0.17);
+  --material-card-text-color: hsl(270.59,0.00%,100.00%);
   --material-toast-background-color: #ccc;
   --material-toast-text-color: #000;
   --material-toast-button-text-color: #583905;
